# storytime

./: .dockerignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Dockerfile  Dockerfile.gha  storytime.code-workspace
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: docker.yml  main.yml  pr.yml
backend/: .gitignore  CHANGELOG.md  Cargo.toml
backend/data/: settings.json.example
backend/src/: ai_services.rs  chatml.rs  job_scheduler.rs  lib.rs  llm_prompt.rs  main.rs  models.rs  routes.rs  settings.rs  utils.rs
backend/src/controllers/: audio_controller.rs  character_controller.rs  chat_controller.rs  health_controller.rs  job_controller.rs  mod.rs  prompt_controller.rs  scheduler_controller.rs
frontend/: CHANGELOG.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: generate-response.ts  index.ts  silly-tavern-api.ts
frontend/src/lib/components/Button/: Button.svelte
frontend/src/lib/components/FormField/: FormField.svelte
frontend/src/lib/models/: character.ts  chat.ts  job.ts  prompt.ts  test.ts
frontend/src/lib/services/: character-service.ts  chat-service.ts  chatterbox-service.ts  job-service.ts  prompt-service.ts  test-service.ts
frontend/src/lib/utils/: audio-utils.ts  character-url.ts  cron.ts  slug.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/characters/: +page.svelte
frontend/src/routes/jobs/: +page.svelte
frontend/src/routes/prompts/: +page.svelte
(+29 files in other folders)
