[package]
name = "backend"
version = "0.2.1"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.23.0"
base64 = "0.22.1"
regex = "1.10"
thiserror = "1.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rand = "0.8"
